feat: 添加默认校验及自定校验规则